# trabalho-1-annykfernandes

./: CMakeLists.txt  README.md  author.md
data/: palavras.txt  scores.txt
include/: File.hpp  Forca.hpp  Player.hpp
src/: File.cpp  Forca.cpp  Player.cpp  main.cpp  palavras.txt  prog
